dev/ingress/fake80-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake80-ingress
  namespace: fake80-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake80.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake80-service
                port:
                  number: 20080
